[tool.poetry]
name = "dis-snek"
version = "8.0.0"
description = "An API wrapper for Discord filled with snakes"
authors = ["LordOfPolls <ddavidallen13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.7.4"
attrs = "^21.4.0"
mypy = ">0.930"
discord-typings = "^0.3.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "tomli"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = "dis_snek.ext.mypy"
