[tool.poetry]
name = "naff"
version = "1.0.0"
description = "Not another freaking fork"
authors = ["LordOfPolls <lordofpolls.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.7.4"
attrs = "^21.4.0"
mypy = ">0.930"
discord-typings = "^0.3.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "tomli"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = "naff.ext.mypy"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
omit = ["tests/*"]

[tools.coverage.run]
source = ["naff",]
